k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: speaker
  labels:
    name: speaker
    app: speaker-tts
